<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.attendee.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_profileFragment2"
            app:destination="@id/profileFragment2"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@android:anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.attendee.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_attendeeItemShowFragment"
            app:destination="@id/attendeeItemShowFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.attendee.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/profileFragment2"
        android:name="com.example.attendee.ProfileFragment"
        android:label="プロフィール編集"
        tools:layout="@layout/fragment_profile">

    </fragment>
    <fragment
        android:id="@+id/attendeeItemShowFragment"
        android:name="com.example.attendee.AttendeeItemShowFragment"
        android:label="出席管理表"
        tools:layout="@layout/fragment_attendee_item_show" >
        <argument android:name="getAttendee"
            app:argType="integer" />
    </fragment>
</navigation>